# 3d_viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
controller/: controller.h
dvi/: dvi.html  dvi.md
model/: affine_transformations.cpp  affine_transformations.h  model.cpp  model.h  model_data.cpp  model_data.h  parser.cpp  parser.h  set_center.cpp  set_center.h
src/: Makefile
src/controller/: controller.h
src/model/: affine_transformations.cpp  affine_transformations.h  model.cpp  model.h  model_data.cpp  model_data.h  parser.cpp  parser.h  set_center.cpp  set_center.h
src/tests/: unit_tests.cpp
src/view/: glwidget.cpp  glwidget.h  main.cpp  view.cpp  view.h
view/: glwidget.cpp  glwidget.h  view.cpp  view.h  view.ui
